🐛 FIX: Tweak for Author boxes on mobile

--- a/style.css
+++ b/style.css
@@ -5255,7 +5255,6 @@ a.sidebar-outlook-link {
 	}
 
 	.author-contact-list {
-		display: block;
 		width: auto;
 	}
 	.author-contact-list li {
